--- a/src/common/translation/locales/en/course.json
+++ b/src/common/translation/locales/en/course.json
@@ -5,5 +5,7 @@
   "EXISTED": "Course with title '{{title}}' already exists.",
   "CREATED": "Course created successfully.",
   "UPDATED": "Course '{{title}}' updated successfully.",
-  "DELETED": "Course with ID {{id}} deleted successfully."
+  "DELETED": "Course with ID {{id}} deleted successfully.",
+  "COURSE_IS_ACTIVE":"Course {title} is active.",
+  "ALREADY_ACTIVE":"Course is already active."
 }
